--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="search_failed">Search failed</string>
+    <string name="no_tracks">This artist has no tracks</string>
 </resources>
