--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name" translatable="false">Spotify Streamer</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="no_artists_found">No artist names matched your search. Please try again.</string>
     <string name="search_failed">Search failed</string>
-    <string name="no_tracks">This artist has no tracks</string>
+    <string name="top_tracks">Top Tracks by</string>
+    <string name="no_tracks">This artist has no top tracks on Spotify. Please try again.</string>
+
+    <!-- intent parameters -->
+    <string name="artist_name" translatable="false">artistName</string>
+    <string name="artist_id" translatable="false">artistId</string>
 </resources>
