--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="search_for_artist">Artist search</string>
     <string name="no_artists_found">No artist names matched your search. Please try again.</string>
     <string name="search_failed">Search failed</string>
     <string name="top_tracks">Top Tracks by</string>
